fixed hidden content and footer, with some navbar alignement

--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -1,5 +1,10 @@
+#content {
+  /* background-color: #d62c2c; */
+  padding-bottom: 200px; /* Change 100px to the height of your footer */
+}
+
 footer {
-  position: fixed; 
+  position: fixed;
   bottom: 0;
   width: 100%;
   background-color: #333;
@@ -14,7 +19,7 @@ footer {
   align-items: center;
   max-width: 1170px;
   margin: 0 auto;
-  padding: 0 15px;
+  padding: 0 0px;
 }
 
 .footer-item {
@@ -24,14 +29,14 @@ footer {
 
 .footer-item h3 {
   font-size: 18px;
-  margin-bottom: 15px;
-  font-weight: 300;
+  margin-bottom: 5px;
+  font-weight: 400;
 }
 
 .footer-item p {
   font-size: 14px;
   line-height: 1.5;
-  margin-bottom: 20px;
+  margin-bottom: 5px;
   color: #999;
 }
 
@@ -75,7 +80,7 @@ footer {
   font-size: 14px;
   color: #999;
   text-align: center;
-  margin-top: 20px;
+  margin-top: 0px;
 }
 
 @media (max-width: 767px) {
